DuPont DevSB/src/objects/ccrz__E_ProductCategory__c.object
<CustomObject>
    <description>The Product Category is a link table which link product with category. It is a many-to-many relationship.</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <description>Reference to the Category</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this association of product to category is available</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__IsCanonicalPath__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value which flags a Category as the Canonical path for a Product. This is used for determining SEO Friendly URLs.</description>
        <inlineHelpText>Flag this Category as the Canonical Path for the Product. This is used for determining SEO Friendly URLs.</inlineHelpText>
        <label>Canonical Path</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategoryId__c</fullName>
        <description>External reference id</description>
        <externalId>true</externalId>
        <label>Product Category Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Product contained within the associated category. The same product can exist within multiple categories</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Ordering of the products within a category</description>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this association of product to category is available</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Product Category</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Category__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <columns>ccrz__Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ProductCatAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>